--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "agenda-petshop",
   "version": "1.0.0",
   "description": "Projeto para curso de nodeJS e GraphQL",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,7 +24,14 @@
     "express": "^4.17.0",
     "express-validator": "^5.3.1",
     "morgan": "^1.9.1",
-    "mysql": "^2.17.1",
-    "nodemon": "^1.19.0"
+    "mysql": "^2.18.1",
+    "node-postgres": "^0.6.2",
+    "nodemon": "^1.19.0",
+    "pg": "^8.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.6.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0"
   }
 }
